test/src/e2e_vm_tests/test_programs/should_pass/language/ret_small_string/src/main.sw
script;

// This doesn't work
fn main() -> str[3] {
    "foo"
}

// This works
//fn main() -> str[9] {
//    "foofoofoo"
//}
